gccida/g3/extend_value_for_giv
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extend_value_for_giv/src/loop.c:7867:28: error: unknown type name 'induction_1'
rtx  extend_value_for_giv( induction_1 *v, rtx value) 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extend_value_for_giv/src/loop.c:7884:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)*( _WORD *)ext_dependent, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extend_value_for_giv/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extend_value_for_giv/src/loop.c:7884:12: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
( rtx_code)*( _WORD *)ext_dependent, 
~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extend_value_for_giv/src/loop.c:7885:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)ext_dependent + 2), 
  ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extend_value_for_giv/src/obj/loop.o] Error 1
